# gs26

./: README.md
production/: Dockerfile  client.py  docker-compose.yml  pyproject.toml  worker.py
production/src/service/: __init__.py  grouper.py  model.py  translator.py
production/src/service/llm/: __init__.py  classifier.py  classifier_custom.py  custom_parser.py  fight_parser.py  industrial_parser.py  traffic_parser.py
production/src/utils/: __init__.py  llm_api.py  llm_output.py
production/src/utils/video_preprocessing/: split_video.py  video_manager.py
