[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "parser"
version = "1.0.0"
dependencies = [
    "setuptools==80.9.0",
    "fastapi[standard]==0.116.1",
    "requests==2.32.5",
    "celery[redis]",
    "uvicorn",
    "minio",
#    "transformers==4.57.1",
#    "sentencepiece==0.2.1",
#    "torch==2.10.0",
]

[tool.setuptools]
packages = ["utils", "service"]
package-dir = {"" = "src"}